deploymentfile.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

  labels:
    app: my-deployment-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
        - name: myapp
          image: chandrakalaj/myapp1:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
