ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vnckacademia-ingress

spec:
  rules:
    - host: vnckacademia.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-service
                port:
                  number: 80
